fluxcd/base/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      containers:
        - name: grafana
          image: docker.io/grafana/grafana
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 1                                                                                                                            │
              memory: 128Mi                                                                                                                        │
            requests:
              cpu: 100m                                                                                                                      │
              memory: 128Mi
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 25
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              subPath: datasources.yaml
              readOnly: true
            - name: config
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              subPath: dashboards.yaml
              readOnly: true
            - name: dashboards
              mountPath: /tmp/grafana/dashboards
              readOnly: true
            - name: tmp
              mountPath: /tmp/grafana
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
        - name: k8s-sidecar
          image: docker.io/kiwigrid/k8s-sidecar:1.19.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dashboards
              mountPath: /dashboards
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: true
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 5
      volumes:
        - name: config
          configMap:
            name: grafana-config
        - name: dashboards
          emptyDir: {}
        - name: tmp
          emptyDir: {}
