fluxcd/base/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 80
      targetPort: http
